store/src/styles/sections/product.scss
* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}
:root {
   --product-image-aspect-ratio-height: 1;
   --product-image-aspect-ratio-width: 1;
   --hern-accent: #38a169;
}
.hern-product-page {
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
}
.hern-product-page {
   .hern-modifier-popup-add-to-cart-btn-parent-div {
      position: unset;
      margin-top: 10px;
   }
}
.hern-product-page__product-section {
   display: flex;
   width: 100%;
   gap: 20px;
   margin-top: 16px;
}
.hern-product-page__product-media-wrapper {
   width: 50%;
   // height: 600px;
   position: relative;
   .hern-veg-non-veg-type {
      position: absolute;
      top: 12px;
      right: 12px;
   }
   .hern-product-modifier-pop-up-modifier-list-in-view-port {
   }
}
.hern-product-page__product-options-wrapper {
   width: 45%;
   background: #ffffff;
   border-radius: 0.25rem;
   // height: 600px;
   overflow-y: auto;
   padding: 0.75rem;
   &::-webkit-scrollbar {
      width: 0.5rem;
   }
   &::-webkit-scrollbar-thumb {
      background-color: #e5e5e5;
      border-radius: 0.25px;
   }
}

.hern-product-image {
   height: 0;
   position: relative;
   @media (min-width: 768px) {
      width: 32.5vw;
   }

   > div {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      > div {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         backdrop-filter: blur(20px);
         background-size: cover;
         background-repeat: no-repeat;
         > img {
            width: 100%;
            height: auto;
         }
      }
   }
}
.hern-product-page__product-options-wrapper {
   .hern-product-modifier-pop-up-content-container {
      height: 310px;
   }
}
.hern-product-page__product-options-wrapper {
   .hern-product-modifier-pop-up-modifier-list-in-view-port {
      height: 32% !important;
   }
}
.hern-product-page__product-options-wrapper {
   .hern-counter-button {
      width: 110px;
   }
}

@media (min-width: 768px) {
   .hern-product-media {
      display: flex;
      flex-direction: row-reverse;
   }
   .hern-product-page__product-options-wrapper {
      .hern-product-modifier-pop-up-modifier-list-in-view-port {
         height: 40% !important;
         width: 482px;
      }
   }
   .hern-product-page__product-options-wrapper {
      .hern-product-modifier-pop-up-content-container {
         height: 260px;
      }
   }
}
.hern-product-image-gallery__preview {
   position: relative;
}
.hern-product-image-gallery__not-previewed {
   display: flex;
   width: 100%;
   overflow-x: auto;
   margin-bottom: 32px;
   @media (max-width: 479px) {
      margin-top: 12px;
   }
   &::-webkit-scrollbar {
      width: 0.25rem;
      height: 0.25rem;
   }
   &::-webkit-scrollbar-thumb {
      background-color: #e5e5e5;
      border-radius: 0.25px;
   }
   > div {
      min-width: 60px;
      width: 60px;

      margin-right: 12px;
      > :nth-last-child(1) {
         margin-right: 0;
      }
      > img {
         width: 100%;
         height: 100%;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         padding: 2px;
         border: 1px solid #e5e5e5;
      }
      > .active-img {
         padding: 2px;
         border: 2px solid var(--hern-accent);
         // for the new-layout of product-image
         width: auto;
         height: auto;
      }
   }
}

/**PRODUCT OPTIONS **/
.hern-product-options {
}

/*Nutrition*/
.hern-nutritionas-header {
   > h2 {
      font-weight: bold;
      font-size: 24px;
      line-height: 33px;
      text-transform: uppercase;
      color: var(--hern-accent);
   }
}

.hern-product-page-section-ending {
   width: 100%;
   height: 4px;
   background: #e4e4e4;
   margin: 20px 0;
}

@media only screen and (max-width: 767px) {
   .hern-product-page__product-section {
      flex-direction: column;
   }
   .hern-product-page__product-media-wrapper {
      width: 100%;
   }
   .hern-product-page__product-options-wrapper {
      width: 100%;
   }
}

.hern-product-section__product-details {
   .hern-product-card__name {
      font-weight: bold;
      font-size: 24px;
      color: var(--hern-accent);
   }
}

.hern-product-options__custom-details {
   display: flex;
   justify-content: space-between;
   gap: 1.5rem;
   // margin-bottom: 16px;
   padding: 12px 32px;
}

.hern-product-options__custom-details__product-title {
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 33px;
   color: var(--hern-accent);
   padding-bottom: 0.5rem;
}
.hern-product-options__custom-details__product-desc {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
   color: #281813;
}
.hern-product-options__custom-details__product-tags {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
   color: #23527c;
   padding-top: 0.5rem;
}
.hern-product-options__custom-details__product-price {
   font-style: normal;
   font-weight: 600;
   font-size: 28px;
   line-height: 38px;
   color: #281813;
}
.hern-product-options__custom-details__left {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
}
.hern-product-page__product-options-wrapper-detail-on-image {
   .hern-product-modifier-pop-up-header-container {
      display: none;
   }
   .hern-modifier-pop-up-product-option-type-list {
      justify-content: flex-start;
      overflow: auto;
      margin-left: 0;
   }
   .hern-product-modifier-pop-up-product-option-list {
      padding: 0;
   }
   .hern-product-modifier-pop-up-product-option-list > label {
      padding-left: 0;
   }
   .hern-product-modifier-pop-up-product-option-list > ul {
      padding: 16px 0;
   }
   .hern-modifier-popup-add-to-cart-btn-parent-div {
      padding: 0 !important;
   }
   padding: 20px;
   // border: 1px solid rgba(0, 0, 0, 0.15);
   // box-sizing: border-box;
   // border-radius: 20px;
}
.hern-product-page__product-media-wrapper-detail-on-image {
   padding: 20px;
   // background: rgba(223, 249, 164, 0.2);
   // border-radius: 24px;
}
.hern-product__product-info {
   margin-bottom: 10px;
}
.hern-product__product-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
}
.hern-product__product-name {
   font-weight: 600;
   font-size: 36px;
   line-height: 50px;
   /* identical to box height */
   color: #000000;
   @media only screen and (max-width: 767px) {
      font-size: 24px;
   }
}
.hern-product__product-price {
   font-weight: 600;
   font-size: 36px;
   line-height: 50px;
   /* identical to box height */
   color: #000000;
   @media only screen and (max-width: 767px) {
      font-size: 24px;
   }
}

